--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,30 +15,7 @@ jobs:
       - run: go get github.com/jstemmer/go-junit-report
       - run:
           name: Install non-gx deps
-          command: >
-            go get -v -d
-            github.com/briandowns/spinner
-            github.com/datatogether/api/apiutil
-            github.com/fatih/color
-            github.com/ipfs/go-datastore
-            github.com/ipfs/go-datastore/query
-            github.com/olekukonko/tablewriter
-            github.com/qri-io/analytics
-            github.com/qri-io/bleve
-            github.com/qri-io/bleve/analysis/lang/en
-            github.com/qri-io/bleve/mapping
-            github.com/qri-io/dataset
-            github.com/qri-io/dataset/detect
-            github.com/qri-io/dataset/dsfs
-            github.com/qri-io/dataset/dsgraph
-            github.com/qri-io/dataset/dsio
-            github.com/qri-io/dataset/dsutil
-            github.com/qri-io/dataset/validate
-            github.com/qri-io/dataset_sql
-            github.com/qri-io/doggos
-            github.com/sirupsen/logrus
-            github.com/spf13/cobra
-            github.com/spf13/viper
+          command: make install-deps
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run: 
