fix(cmd.Add): cleaned up add command
add command was, well, broken. Now it's less broken. Also cleaned up
a few stray linting errors and made circleCI fail on golint errors

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run: go get github.com/jstemmer/go-junit-report github.com/golang/lint/golint github.com/qri-io/datasetDiffer
       - run: 
           name: Run Lint Tests
-          command: golint ./...
+          command: golint -set_exit_status ./...
       - run:
           name: Install non-gx deps
           command: make install-deps
