feat(config): made webapp updates lookup configurable
getting app.qri.io up & running has required us to remove the hardcoding
around where to check for updates, which will help in a few other places,
like when we want to deliver a custom frontend, or not accept updates
automatically from the default location.

--- a/config/testdata/default.yaml
+++ b/config/testdata/default.yaml
@@ -32,8 +32,8 @@ webapp:
   enabled: true
   port: 2505
   analyticstoken: ""
-  scripts:
-  - http://localhost:2503/ipfs/QmYDkLrvzDpzDzKeLD3okiQUzSL1ksNsfYU6ZwRYYn8ViS
+  entrypointupdateaddress: /ipns/webapp.qri.io
+  entrypointhash: QmYDkLrvzDpzDzKeLD3okiQUzSL1ksNsfYU6ZwRYYn8ViS
 rpc:
   enabled: true
   port: 2504
