feat(render): add render command for executing templates against datasets
Pumped about this one. I've realized we can get a long way by just executing templates against qri datasets, which have a rigid structure that makes templating much easier. So with that, I'd like to introduce a new command: `qri render`. `qri render` accepts a dataset name, executes a HTML template, using the specified dataset to populate template data. It has a few features:

* render uses the `template/html` package from golang. users of the Hugo static site generator will feel at home with this syntax
* users can provide custom templates with the --template argument
* if no template is specified, qri uses a default "stock" template that is resolved over IPFS
* this stock template is updated using IPNS, similar to the way we distribute app updates
* template fetching falls back to a P2P gateway over HTTP if configured correctly
* render automatically loads data using the same logic as the `qri data` command, accepting --limit, --offset, and --all params to control data loading
* writes to stdout by default, to a file with --output flag

To get this to work I had to introduce some other new stuff:
* render section in config: this holds the place to lookup default template IPNS addresses
* config.P2P.HTTPGatewayAddr: url of a gateway to resolve content-addressed hashes with qri isn't connected to the p2p network

This opens up a whole world of possiblities, users can use `qri render` to create custom representations of data that suites their needs, and leverage qri to generate these assets as they go

Limitations:
* currently the template must be loaded as a single file, in the future we should add support for partials & stuff
* currently HTML templates only. I've added a "TemplateFormat" param that currently does nothing, but in the future we can use this to expand to other common template output formats (raw text, PDF?)

--- a/config/testdata/default.yaml
+++ b/config/testdata/default.yaml
@@ -28,6 +28,7 @@ p2p:
   online: true
   selfreplication: full
   boostrapaddrs: []
+  httpgatewayaddr: https://ipfs.io
 webapp:
   enabled: true
   port: 2505
@@ -39,3 +40,6 @@ rpc:
   port: 2504
 logging:
   levels: {}
+render:
+  templateupdateaddress: /ipns/defaulttmpl.qri.io
+  defaulttemplatehash:   /ipfs/QmeqeRTf2Cvkqdx4xUdWi1nJB2TgCyxmemsL3H4f1eTBaw
