--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
       - run:
           name: Install gx-dependant packages
           command: >
-            go get github.com/qri-io/cafs
+            make install-gx-dep-packages
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
