--- a/api/open_api_3.yaml
+++ b/api/open_api_3.yaml
@@ -304,8 +304,16 @@ paths:
   /body/{datasetRef}:
     parameters:
       - $ref: '#/components/parameters/datasetRef'
+      - description: returns the body as a stream of data
+        in: query
+        name: download
+        type: boolean
+      - description: format should only be set when used with the download flag. This allows you to export the body of the dataset in a different format. Options are json, xlsx, csv, cbor
+        in: query
+        name: format
+        type: string
     get:
-      summary: Get a dataset's body
+      summary: Get a dataset's body. By default (with no parameters), the body will be returned as paginated json.
       operationId: getBody
       responses:
         '200':
@@ -638,6 +646,14 @@ paths:
   /export/{datasetRef}:
     parameters:
       - $ref: '#/components/parameters/datasetRef'
+      - description: defaults to true. When true, data payload is a zipped file.
+        in: query
+        name: zipped
+        type: boolean
+      - description: format the dataset should be converted to. Options are json, yaml, xlsx
+        in: query
+        name: format
+        type: string
     get:
       summary: Export a dataset header and body as a zip
       operationId: zipDataset
