--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - checkout
       - run: mkdir -p $TEST_RESULTS
-      - run: go get github.com/jstemmer/go-junit-report golang.org/x/lint/golint github.com/qri-io/dsdiff github.com/jinzhu/copier
+      - run: go get github.com/jstemmer/go-junit-report golang.org/x/lint/golint github.com/jinzhu/copier
       - run:
           name: Run Lint Tests
           command: golint -set_exit_status ./...
