--- a/config/testdata/default.yaml
+++ b/config/testdata/default.yaml
@@ -46,3 +46,6 @@ logging:
 render:
   templateupdateaddress: /ipns/defaulttmpl.qri.io
   defaulttemplatehash:   /ipfs/QmeqeRTf2Cvkqdx4xUdWi1nJB2TgCyxmemsL3H4f1eTBaw
+stats:
+  type: fs
+  maxsize: 25600
