refactor(*): changes based on review
three main changes:

lib.StatsResponse, must contain a slice of bytes rather then a reader

lib.InstanceOptions contains a stats.Cache, not a stats.Stats

`qri get stats` is implemented

--- a/config/testdata/default.yaml
+++ b/config/testdata/default.yaml
@@ -47,5 +47,6 @@ render:
   templateupdateaddress: /ipns/defaulttmpl.qri.io
   defaulttemplatehash:   /ipfs/QmeqeRTf2Cvkqdx4xUdWi1nJB2TgCyxmemsL3H4f1eTBaw
 stats:
-  type: fs
-  maxsize: 25600
+  cache:
+    type: fs
+    maxsize: 25600
