--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: '2.1'
+version: 2.1
 
 jobs:
   build:
@@ -7,8 +7,6 @@ jobs:
       - image: circleci/golang:latest
         environment:
           GO111MODULE: "on"
-          GOPROXY: "https://proxy.golang.org"
-          GOSUMDB: "off"
     environment:
       TEST_RESULTS: /tmp/test-results
       GOFLAGS: -p=8
