refactor(config): expose filesystem config

--- a/config/testdata/default.yaml
+++ b/config/testdata/default.yaml
@@ -5,6 +5,14 @@ repo:
   type: fs
 store:
   type: ipfs
+filesystems:
+  - type: ipfs
+    config:
+      path: ./ipfs
+      api: true
+      pubsub: false
+  - type: local
+  - type: http
 cli:
   colorizeoutput: true
 api:
