refactor(store): drop Store from config, muxfs owns cafs.Filestore
replace config.Store with values provided by config.Filesystems. This comes with
many changes lower in the stack aimed at deprecating cafs.Filestore.

Getting a cafs.Filestore now happens by way of a *mufs.Mux, which constrcuts
and owns any cafs.Filestores. The repo.Store() accessor now proxies
repo.Filesystem().DefaultWriteFS(). The repo.Store() method should be removed
entirely in the future as part of our transition away from the repo interface.

To ease the repo -> lib.Instance transiition, repo.Filesystem() now returns a
muxfs.Mux, which will allow callers to shift usage up to the
lib.instance.Filesystem() field, which is already a *muxfs.Mux. Because muxfs
owns the cafs interface, this commit drops lib.Instance.store entirely.

This commit also adds the notion of a Write Destination to the save path, adding
a new Filesystem parameter to base.SaveDataset, and having all persistance write
to that store. In the future we plan to introduce techniques to direct saving to
non-default filesystems via configuration, which can be accomplished by passing
different filesystems as the `writeDest` parameter. This commit uses the
writeDest parmeter to preserve `dryRun` functionality by passing an ephemeral
in-memory write destination.

Other notable changes:
* lib.OptSetIPFSPath now sets the path value of an "ipfs" config.Filesystem,
  adding one if it no longer exists
* lib.OptSetIPFSPath is no longer used by default, it's repurposed to make qri
  use the standard IPFS repo or na explicit repo path
* remove base.DatasetBodyFile
* remove buildrepo.NewCAFSStore

--- a/config/testdata/default.yaml
+++ b/config/testdata/default.yaml
@@ -3,8 +3,12 @@ profile:
   peername: foobar
 repo:
   type: fs
-store:
-  type: ipfs
+filesystems:
+- type: ipfs
+  config:
+    path: ./ipfs
+- type: local
+- type: http
 cli:
   colorizeoutput: true
 api:
