--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     working_directory: /go/src/github.com/qri-io/qri
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.14.6
         environment:
           GO111MODULE: "on"
     environment:
